[package]
name = "trackermod"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
num_enum = "0.4"

[dev-dependencies]
hound = "3.4"

[[example]]
name = "moddump"

[[example]]
name = "mod2wav"